# langchain-projects

./: .gitignore  README.md  pyproject.toml
data/: medium.txt
data/langchain-docs/: mongodb_index.html
doc_rag/: download_docs.py  main.py  pyproject.toml
doc_rag/backend/: core.py
medium_analyzer/: main.py  pyproject.toml
